:sparkles: Web Dashboard
Signed-off-by: 舰队的偶像-岛风酱! <frg2089@outlook.com>

--- a/Shimakaze.RemoteApp.Web/appsettings.json
+++ b/Shimakaze.RemoteApp.Web/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StaticResourcesPath": "wwwroot",
+  "DefaultIconPath": "C:\\Windows\\system32\\shell32.dll"
 }
