:sparkles: 新的图标加载逻辑
Signed-off-by: 舰队的偶像-岛风酱! <frg2089@outlook.com>

--- a/Shimakaze.RemoteApp.Web/appsettings.json
+++ b/Shimakaze.RemoteApp.Web/appsettings.json
@@ -7,5 +7,18 @@
   },
   "AllowedHosts": "*",
   "StaticResourcesPath": "wwwroot",
-  "DefaultIconPath": "C:\\Windows\\system32\\shell32.dll"
+  "DefaultIconPath": "C:\\Windows\\system32\\shell32.dll",
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": ".\\Shimakaze.RemoteApp.Web.pfx",
+        "Password": "<Password>"
+      }
+    },
+    "EndpointDefaults": {
+      "ClientCertificateMode": "AllowCertificate",
+      "SslProtocols": [ "Tls13", "Tls12" ],
+      "Protocols": "Http1AndHttp2AndHttp3"
+    }
+  }
 }
