--- a/Shimakaze.RemoteApp.Web/Shimakaze.RemoteApp.Web.csproj
+++ b/Shimakaze.RemoteApp.Web/Shimakaze.RemoteApp.Web.csproj
@@ -9,20 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="NativeMethods.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="NativeMethods.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.2.164-beta">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="WinCopies.IconLib" Version="0.75.0-rc" />
   </ItemGroup>
 
   <ItemGroup>
