--- a/Shimakaze.RemoteApp.Web/appsettings.json
+++ b/Shimakaze.RemoteApp.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "StaticResourcesPath": "wwwroot",
   "DefaultIconPath": "C:\\Windows\\system32\\shell32.dll",
+  "DefaultIconIndex": 0,
   "Kestrel": {
    "Certificates": {
      "Default": {
