--- a/Shimakaze.RemoteApp.Web/Shimakaze.RemoteApp.Web.csproj
+++ b/Shimakaze.RemoteApp.Web/Shimakaze.RemoteApp.Web.csproj
@@ -1,17 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Platforms>AnyCPU;x64</Platforms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
-    <PackageReference Include="WinCopies.IconLib" Version="0.75.0-rc" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" />
+    <PackageReference Include="System.Drawing.Common" />
+    <PackageReference Include="WinCopies.IconLib" />
   </ItemGroup>
 
   <ItemGroup>
