--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(MSBuildProjectExtension)' == '.csproj'">
     <GlobalPackageReference Include="IDisposableAnalyzers" Version="4.0.7" />
     <GlobalPackageReference Include="GitVersion.MsBuild" Version="6.0.0-beta.5" />
   </ItemGroup>
@@ -11,5 +11,7 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
     <PackageVersion Include="System.Drawing.Common" Version="8.0.2" />
     <PackageVersion Include="WinCopies.IconLib" Version="0.75.0-rc" />
+    <PackageVersion Include="WixToolset.Netfx.wixext" Version="4.0.4" />
+    <PackageVersion Include="WixToolset.UI.wixext" Version="4.0.4" />
   </ItemGroup>
 </Project>
